[gd_scene load_steps=21 format=2]

[ext_resource path="res://Pac-Man/Scripts/ScriptPacManPersonaje.gd" type="Script" id=1]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Pacman/Pacman 01.png" type="Texture" id=2]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Pacman/Pacman 02.png" type="Texture" id=3]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Pacman/Pacman 03.png" type="Texture" id=4]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Pacman/Pacman death 01.png" type="Texture" id=5]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Pacman/Pacman death 02.png" type="Texture" id=6]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Pacman/Pacman death 03.png" type="Texture" id=7]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Pacman/Pacman death 04.png" type="Texture" id=8]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Pacman/Pacman death 05.png" type="Texture" id=9]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Pacman/Pacman death 06.png" type="Texture" id=10]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Pacman/Pacman death 07.png" type="Texture" id=11]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Pacman/Pacman death 08.png" type="Texture" id=12]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Pacman/Pacman death 09.png" type="Texture" id=13]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Pacman/Pacman death 10.png" type="Texture" id=14]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Pacman/Pacman death 11.png" type="Texture" id=15]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Pacman/Pacman death 12.png" type="Texture" id=16]
[ext_resource path="res://Escenas/EscenaGameOver.tscn" type="PackedScene" id=17]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Movimiento",
"speed": 18.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "Muerte",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 4.5

[node name="PacManPersonaje" type="KinematicBody2D" groups=[
"player",
]]
pause_mode = 2
collision/safe_margin = 0.001
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_as_relative = false
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 2 )
animation = "Muerte"
frame = 15
playing = true

[node name="AreaHitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Hitbox" type="CollisionShape2D" parent="AreaHitbox"]
shape = SubResource( 3 )

[node name="CanvasGameOver" type="CanvasLayer" parent="."]

[node name="EscenaGameOver" parent="CanvasGameOver" instance=ExtResource( 17 )]
visible = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="AreaHitbox" to="." method="_on_AreaHitbox_area_entered"]
